; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_pack-objects.c_insert_commit.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_pack-objects.c_insert_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.walk_object = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @insert_commit(%struct.TYPE_5__* %0, %struct.walk_object* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.walk_object*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store %struct.walk_object* %1, %struct.walk_object** %5, align 8
  store i32* null, i32** %7, align 8
  store i32* null, i32** %8, align 8
  %9 = load %struct.walk_object*, %struct.walk_object** %5, align 8
  %10 = getelementptr inbounds %struct.walk_object, %struct.walk_object* %9, i32 0, i32 0
  store i32 1, i32* %10, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = load %struct.walk_object*, %struct.walk_object** %5, align 8
  %13 = getelementptr inbounds %struct.walk_object, %struct.walk_object* %12, i32 0, i32 1
  %14 = call i32 @git_packbuilder_insert(%struct.TYPE_5__* %11, i32* %13, i32* null)
  store i32 %14, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  store i32 %17, i32* %3, align 4
  br label %50

18:                                               ; preds = %2
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.walk_object*, %struct.walk_object** %5, align 8
  %23 = getelementptr inbounds %struct.walk_object, %struct.walk_object* %22, i32 0, i32 1
  %24 = call i32 @git_commit_lookup(i32** %7, i32 %21, i32* %23)
  store i32 %24, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %50

28:                                               ; preds = %18
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @git_commit_tree_id(i32* %32)
  %34 = call i32 @git_tree_lookup(i32** %8, i32 %31, i32 %33)
  store i32 %34, i32* %6, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  br label %44

37:                                               ; preds = %28
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %39 = load i32*, i32** %8, align 8
  %40 = call i32 @insert_tree(%struct.TYPE_5__* %38, i32* %39)
  store i32 %40, i32* %6, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %37
  br label %44

43:                                               ; preds = %37
  br label %44

44:                                               ; preds = %43, %42, %36
  %45 = load i32*, i32** %7, align 8
  %46 = call i32 @git_commit_free(i32* %45)
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @git_tree_free(i32* %47)
  %49 = load i32, i32* %6, align 4
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %44, %26, %16
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @git_packbuilder_insert(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i32 @git_commit_lookup(i32**, i32, i32*) #1

declare dso_local i32 @git_tree_lookup(i32**, i32, i32) #1

declare dso_local i32 @git_commit_tree_id(i32*) #1

declare dso_local i32 @insert_tree(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @git_commit_free(i32*) #1

declare dso_local i32 @git_tree_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
